# Aidaytrading

./: .devcontainer.json  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  api.bat  dash.bat  dashboard.py  data_feeds.py  docker-compose.yml  launch_dashboard.bat  main.py  plotting.py  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-ml.txt  requirements.txt  run  run.ps1  run_bot.bat  run_bot.sh  run_dashboard.sh  trade.bat  ui_helpers.py
backend/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/.github/workflows/: qa.yml
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  bot.py  devices.py  equity.py  monitoring.py  notifications.py  risk.py  trades.py  users.py  websocket.py  ws.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  reporting.py  users.py
backend/app/core/: config.py  database.py  dependencies.py  health.py  jwt.py  logging.py  metrics.py  rate_limiter.py  security.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  admin_action.py  base.py  device_token.py  reporting.py  risk.py  token_blacklist.py  trade.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  reporting.py  risk.py  trade.py  user.py
backend/app/security/: auth.py  jwt.py
backend/app/services/: bot.py  brevo.py  brevo_email.py  events.py  metrics_source.py  notifications.py  pubsub.py  push.py  ratelimiter.py  reporting.py  risk.py  trade_feed.py
backend/app/tasks/: jobs.py  scheduler.py
backend/app/tests/: conftest.py  test_admin.py  test_auth.py  test_observability.py  test_push.py  test_rate_limit.py  test_reporting.py  test_users.py  test_websockets.py  utils.py
backend/app/utils/: logger.py  time.py
backend/tests/: conftest.py  test_auth.py  test_bot.py  test_notifications.py  test_risk.py  test_users.py  test_ws.py
backend/tests/regression/: test_regression.py
(+351 files in other folders)
